apps/base/service-3/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-3
  labels:
    istio-injection: enabled
