apps/base/service-3/request-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-service-3
  namespace: service-3
spec:
  selector:
    matchLabels:
      app: service-3
  jwtRules:
    - issuer: "https://desafio-devops-pleno.rio"
      jwks: '{"keys":[{"use":"sig","kty":"EC","kid":"test-key","crv":"P-256","alg":"ES256","x":"QckJa_UL9_Sl1MlNg9cagdZE4eM9JQi-fOVWtSaOxPw","y":"zFzX1llnCp7Y_S7Sj9_RnT86_q5PyvnyPgxTw4lOgXA"}]}'
