apps/base/service-3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-3
  namespace: service-3
spec:
  type: ClusterIP
  selector:
    app: service-3
  ports:
    - port: 80
      targetPort: 80
