apps/base/service-3/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-3
  namespace: service-3
spec:
  hosts:
    - "service-3.example.com"
    - service-3.service-3.svc.cluster.local
  gateways:
    - service-3-gateway
    - mesh
  http:
    - route:
        - destination:
            host: service-3.service-3.svc.cluster.local
            port:
              number: 80
