apps/base/service-3/authorization-policy-jwt.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt-service-3
  namespace: service-3
spec:
  selector:
    matchLabels:
      app: service-3
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["https://auth.example.com/*"]
